// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Function default parameter with value "null" 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local function foo(self, x)
        return x
    end
    return foo(nil)
end
return ____exports"
`;

exports[`Function default parameter with value "undefined" 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local function foo(self, x)
        return x
    end
    return foo(nil)
end
return ____exports"
`;

exports[`function.length unsupported ("5.0"): code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local function fn(self)
    end
    return debug.getinfo(fn).nparams - 1
end
return ____exports"
`;

exports[`function.length unsupported ("5.0"): diagnostics 1`] = `"main.ts(3,20): error TSTL: function.length is/are not supported for target Lua 5.0."`;

exports[`function.length unsupported ("5.1"): code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local function fn(self)
    end
    return debug.getinfo(fn).nparams - 1
end
return ____exports"
`;

exports[`function.length unsupported ("5.1"): diagnostics 1`] = `"main.ts(3,20): error TSTL: function.length is/are not supported for target Lua 5.1."`;

exports[`function.length unsupported ("universal"): code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local function fn(self)
    end
    return debug.getinfo(fn).nparams - 1
end
return ____exports"
`;

exports[`function.length unsupported ("universal"): diagnostics 1`] = `"main.ts(3,20): error TSTL: function.length is/are not supported for target Lua universal."`;

exports[`missing declaration name: code 1`] = `
"function ____(self)
end"
`;

exports[`missing declaration name: diagnostics 1`] = `"main.ts(2,18): error TS1003: Identifier expected."`;
